code section mobile buttons overflow bug

--- a/themes/genezio-theme/assets/scss/the-code.scss
+++ b/themes/genezio-theme/assets/scss/the-code.scss
@@ -34,6 +34,7 @@
   border: none;
   background: rgba(255, 255, 255, 0.1);
   border-radius: 4px;
+  overflow: hidden;
 
   text-decoration: none !important;
   a {
